# fake-cdn

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt  stats.json
docs/: api_log_2025-12-19_11-10-00.md  推送日志.md
fake_cdn/: __init__.py  __main__.py  cli.py
fake_cdn/core/: __init__.py  generator.py  pusher.py  scheduler.py  storage.py  validator.py
fake_cdn/dashboard/: __init__.py  app.py
scripts/: deploy.sh  quickstart.sh
tests/: __init__.py
